feat: implement global stacked announcements system and api
